figured out station id problem with Tuthill.  Added gmaps capability to notebooks

--- a/src/testy.ipynb
+++ b/src/testy.ipynb
@@ -9,11 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ogr, osr\n",
+    "import gmaps\n",
+    "import gmaps.datasets\n",
+    "import os\n",
     "# Find codes in this file ~/anaconda3/envs/tf2/share/gdal/pcs.csv\n",
     "# \n",
     "# Using google\n",
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.01313888888889 -75.00066666666666\n"
+      "36.679805555555554 -75.984\n",
+      "using floor 36.01313888888889, 75.00066666666666\n"
      ]
     }
    ],
@@ -77,32 +81,45 @@
     "minutes = 40.0\n",
     "seconds = 47.3\n",
     "\n",
+    "# According to wikipedia I should \n",
     "# use floor division for minutes\n",
-    "pointX = degrees + minutes//60.0 + seconds/3600.0 \n",
+    "pointX_floor = degrees + minutes//60.0 + seconds/3600.0 \n",
+    "\n",
+    "# According to Tuthill, don't do this\n",
+    "pointX = degrees + minutes/60.0 + seconds/3600.0 \n",
+    "\n",
     "\n",
     "degrees = 75\n",
     "minutes = 59.0\n",
     "seconds = 02.4\n",
     "\n",
+    "# According to wikipedia I should \n",
     "# use floor division for minutes\n",
-    "pointY = degrees + minutes//60.0 + seconds/3600.0 \n",
+    "pointY_floor = degrees + minutes//60.0 + seconds/3600.0 \n",
+    "\n",
+    "# According to Tuthill, don't do this\n",
+    "pointY = degrees + minutes/60.0 + seconds/3600.0 \n",
     "\n",
     "# since the number should be negative\n",
     "pointY = -pointY\n",
     "\n",
-    "print(pointX, pointY)"
+    "print(pointX, pointY)\n",
+    "print(\"using floor {}, {}\".format(pointX_floor, pointY_floor))\n",
+    "\n",
+    "# The non use of floor seems to work.  Also its good enough that\n",
+    "# the change is coordinate systems seems to not be required."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.01313888888889 -75.00066666666666\n"
+      "36.679805555555554 -75.984\n"
      ]
     }
    ],
@@ -132,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36.01313888888889, -75.00066666666666, 0.0)\n"
+      "(36.679805555555554, -75.984, 0.0)\n"
      ]
     }
    ],
@@ -157,12 +174,65 @@
     "# another variant.  Essentially the same.\n",
     "from osgeo import osr\n",
     "inp= osr.SpatialReference()\n",
-    "inp.ImportFromEPSG(4269)\n",
+    "inp.ImportFromEPSG(inputEPSG)\n",
     "out= osr.SpatialReference()\n",
-    "out.ImportFromEPSG(4326)\n",
+    "out.ImportFromEPSG(outputEPSG)\n",
     "transformation = osr.CoordinateTransformation(inp,out)\n",
     "print(transformation.TransformPoint(pointX,pointY))\n",
     "#(-74.27000000011289, 40.46999999990432, 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=os.environ[\"GOOGLE_MAPS_API_KEY\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "052c8c2927374219928073dd0dc77508",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = gmaps.figure()\n",
+    "# print the two locations, correct without floor and incorrect with floor\n",
+    "locations = [(36.679805555555554, -75.984), (36.01313888888889, -75.00066666666666)]\n",
+    "fig = gmaps.figure(center=(36.0, -75.0), zoom_level=8)\n",
+    "fig = gmaps.figure(layout={\n",
+    "        'width': '400px',\n",
+    "        'height': '600px',\n",
+    "        'padding': '3px',\n",
+    "        'border': '1px solid black'\n",
+    "})\n",
+    "# give ablitly to turn on satelite\n",
+    "fig = gmaps.figure(map_type='HYBRID')\n",
+    "\n",
+    "# show stations as green dots\n",
+    "stations_layer = gmaps.symbol_layer(\n",
+    "    locations, fill_color=\"green\", stroke_color=\"green\", scale=2\n",
+    ")\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(stations_layer)\n",
+    "\n",
+    "fig"
    ]
   },
   {
