--- a/src/testy.ipynb
+++ b/src/testy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "052c8c2927374219928073dd0dc77508",
+       "model_id": "4967b78830ee46a9b1bef731dac018ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,6 +241,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# converting all the sites to decimal lat/longs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_degminsec_dict = {\"0204288721\":{\"lat\":{\"deg\":36.0,\"min\":49.0, \"sec\":38.0},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":9.0, \"sec\":56.0}},\n",
+    "                      \n",
+    "                      \"0204291317\":{\"lat\":{\"deg\":36.0,\"min\":50.0, \"sec\":35.9},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":7.0, \"sec\":28.1}},\n",
+    "                      \n",
+    "                      \"0204293125\":{\"lat\":{\"deg\":36.0,\"min\":50.0, \"sec\":28.1},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":3.0, \"sec\":25.7}},\n",
+    "                      \n",
+    "                      \"0204295505\":{\"lat\":{\"deg\":36.0,\"min\":51.0, \"sec\":33.4},\n",
+    "                                    \"lon\":{\"deg\":-75.0,\"min\":59, \"sec\":4.1}},\n",
+    "                      \n",
+    "                      \"02042928\":{\"lat\":{\"deg\":36.0,\"min\":48.0, \"sec\":56.8},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":3.0, \"sec\":39.3}},\n",
+    "                      \n",
+    "                      \"0204297575\":{\"lat\":{\"deg\":36.0,\"min\":49.0, \"sec\":29.2},\n",
+    "                                    \"lon\":{\"deg\":-75.0,\"min\":59.0, \"sec\":6.9}},\n",
+    "                      \n",
+    "                      \"02043155\":{\"lat\":{\"deg\":36.0,\"min\":47.0, \"sec\":18.1},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":4.0, \"sec\":14.8}},\n",
+    "                      \n",
+    "                      \"0204288539\":{\"lat\":{\"deg\":36.0,\"min\":42.0, \"sec\":42.1},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":16.0, \"sec\":5.6}},\n",
+    "                      \n",
+    "                      \"0204309906\":{\"lat\":{\"deg\":36.0,\"min\":41.0, \"sec\":26.32},\n",
+    "                                    \"lon\":{\"deg\":-76.0,\"min\":12.0, \"sec\":44.34}},\n",
+    "                      \n",
+    "                      \"0204300267\":{\"lat\":{\"deg\":36.0,\"min\":40.0, \"sec\":47.3},\n",
+    "                                    \"lon\":{\"deg\":-75.0,\"min\":59, \"sec\":2.4}},\n",
+    "                     }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'deg': 36.0, 'min': 49.0, 'sec': 38.0}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc_degminsec_dict[\"0204288721\"]['lat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc_degminsec_dict[\"0204288721\"]['lat']['deg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# According to Tuthill, don't do this\n",
+    "pointX = degrees + minutes/60.0 + seconds/3600.0 \n",
+    "\n",
+    "\n",
+    "degrees = 75\n",
+    "minutes = 59.0\n",
+    "seconds = 02.4\n",
+    "\n",
+    "# According to wikipedia I should \n",
+    "# use floor division for minutes\n",
+    "pointY_floor = degrees + minutes//60.0 + seconds/3600.0 \n",
+    "\n",
+    "# According to Tuthill, don't do this\n",
+    "pointY = degrees + minutes/60.0 + seconds/3600.0 \n",
+    "\n",
+    "# since the number should be negative\n",
+    "pointY = -pointY\n",
+    "\n",
+    "print(pointX, pointY)\n",
+    "print(\"using floor {}, {}\".format(pointX_floor, pointY_floor))\n",
+    "\n",
+    "# The non use of floor seems to work.  Also its good enough that\n",
+    "# the change is coordinate systems seems to not be required."
+   ]
   }
  ],
  "metadata": {
