--- a/src/testy.ipynb
+++ b/src/testy.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "{'deg': 36.0, 'min': 49.0, 'sec': 38.0}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "36.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,34 +336,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# According to Tuthill, don't do this\n",
-    "pointX = degrees + minutes/60.0 + seconds/3600.0 \n",
+    "# convert stations location in degrees, minutes, seconds to degrees.fractional degrees\n",
+    "def convert_station_in_dms_to_dfd(station):\n",
+    "    degrees = loc_degminsec_dict[station]['lat']['deg']\n",
+    "    minutes = loc_degminsec_dict[station]['lat']['deg']\n",
+    "    seconds = loc_degminsec_dict[station]['lat']['deg']\n",
+    "    pointX = degrees + minutes/60.0 + seconds/3600.0 \n",
+    "    \n",
+    "    degrees = loc_degminsec_dict[station]['lon']['deg']\n",
+    "    minutes = loc_degminsec_dict[station]['lon']['deg']\n",
+    "    seconds = loc_degminsec_dict[station]['lon']['deg']    \n",
+    "    pointY = degrees + minutes/60.0 + seconds/3600.0 \n",
     "\n",
-    "\n",
-    "degrees = 75\n",
-    "minutes = 59.0\n",
-    "seconds = 02.4\n",
-    "\n",
-    "# According to wikipedia I should \n",
-    "# use floor division for minutes\n",
-    "pointY_floor = degrees + minutes//60.0 + seconds/3600.0 \n",
-    "\n",
-    "# According to Tuthill, don't do this\n",
-    "pointY = degrees + minutes/60.0 + seconds/3600.0 \n",
-    "\n",
-    "# since the number should be negative\n",
-    "pointY = -pointY\n",
-    "\n",
-    "print(pointX, pointY)\n",
-    "print(\"using floor {}, {}\".format(pointX_floor, pointY_floor))\n",
-    "\n",
-    "# The non use of floor seems to work.  Also its good enough that\n",
-    "# the change is coordinate systems seems to not be required."
+    "    return pointX, pointY"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pointX, pointY = convert_station_in_dms_to_dfd(\"0204288721\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36.61, -77.28777777777778)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(pointX, pointY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "station id: 0204288721 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204291317 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204293125 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204295505 lat: 36.61 lon: -76.27083333333333\n",
+      "station id: 02042928 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204297575 lat: 36.61 lon: -76.27083333333333\n",
+      "station id: 02043155 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204288539 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204309906 lat: 36.61 lon: -77.28777777777778\n",
+      "station id: 0204300267 lat: 36.61 lon: -76.27083333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "for station in loc_degminsec_dict:\n",
+    "    pointX, pointY = convert_station_in_dms_to_dfd(station)\n",
+    "    print(\"station id: {} lat: {} lon: {}\".format(station, pointX, pointY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
