--- a/src/testy.ipynb
+++ b/src/testy.ipynb
@@ -336,20 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert stations location in degrees, minutes, seconds to degrees.fractional degrees\n",
     "def convert_station_in_dms_to_dfd(station):\n",
     "    degrees = loc_degminsec_dict[station]['lat']['deg']\n",
-    "    minutes = loc_degminsec_dict[station]['lat']['deg']\n",
-    "    seconds = loc_degminsec_dict[station]['lat']['deg']\n",
+    "    minutes = loc_degminsec_dict[station]['lat']['min']\n",
+    "    seconds = loc_degminsec_dict[station]['lat']['sec']\n",
     "    pointX = degrees + minutes/60.0 + seconds/3600.0 \n",
     "    \n",
     "    degrees = loc_degminsec_dict[station]['lon']['deg']\n",
-    "    minutes = loc_degminsec_dict[station]['lon']['deg']\n",
-    "    seconds = loc_degminsec_dict[station]['lon']['deg']    \n",
+    "    minutes = loc_degminsec_dict[station]['lon']['min']\n",
+    "    seconds = loc_degminsec_dict[station]['lon']['sec']    \n",
     "    pointY = degrees + minutes/60.0 + seconds/3600.0 \n",
     "\n",
     "    return pointX, pointY"
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(36.61, -77.28777777777778)"
+       "(36.827222222222225, -75.83444444444444)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,23 +386,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "station id: 0204288721 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204291317 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204293125 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204295505 lat: 36.61 lon: -76.27083333333333\n",
-      "station id: 02042928 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204297575 lat: 36.61 lon: -76.27083333333333\n",
-      "station id: 02043155 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204288539 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204309906 lat: 36.61 lon: -77.28777777777778\n",
-      "station id: 0204300267 lat: 36.61 lon: -76.27083333333333\n"
+      "station id: 0204288721 lat: 36.827222222222225 lon: -75.83444444444444\n",
+      "station id: 0204291317 lat: 36.84330555555556 lon: -75.87552777777779\n",
+      "station id: 0204293125 lat: 36.84113888888889 lon: -75.94286111111111\n",
+      "station id: 0204295505 lat: 36.85927777777778 lon: -74.01552777777778\n",
+      "station id: 02042928 lat: 36.815777777777775 lon: -75.93908333333334\n",
+      "station id: 0204297575 lat: 36.82477777777778 lon: -74.01474999999999\n",
+      "station id: 02043155 lat: 36.78836111111111 lon: -75.92922222222222\n",
+      "station id: 0204288539 lat: 36.71169444444445 lon: -75.73177777777778\n",
+      "station id: 0204309906 lat: 36.690644444444445 lon: -75.78768333333333\n",
+      "station id: 0204300267 lat: 36.679805555555554 lon: -74.016\n"
      ]
     }
    ],
