--- a/src/testy.ipynb
+++ b/src/testy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,22 +184,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'GOOGLE_MAPS_API_KEY'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-c0aa82f580e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"GOOGLE_MAPS_API_KEY\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/anaconda3/envs/tf2/lib/python3.7/os.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    676\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    677\u001b[0m             \u001b[0;31m# raise KeyError with the original key value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 678\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    679\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecodevalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    680\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'GOOGLE_MAPS_API_KEY'"
+     ]
+    }
+   ],
    "source": [
     "gmaps.configure(api_key=os.environ[\"GOOGLE_MAPS_API_KEY\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4967b78830ee46a9b1bef731dac018ea",
+       "model_id": "9f96ee3fbb0748fbbe5998dff352cf3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,39 +264,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "loc_degminsec_dict = {\"0204288721\":{\"lat\":{\"deg\":36.0,\"min\":49.0, \"sec\":38.0},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":9.0, \"sec\":56.0}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":9.0, \"sec\":56.0}},\n",
     "                      \n",
     "                      \"0204291317\":{\"lat\":{\"deg\":36.0,\"min\":50.0, \"sec\":35.9},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":7.0, \"sec\":28.1}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":7.0, \"sec\":28.1}},\n",
     "                      \n",
     "                      \"0204293125\":{\"lat\":{\"deg\":36.0,\"min\":50.0, \"sec\":28.1},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":3.0, \"sec\":25.7}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":3.0, \"sec\":25.7}},\n",
     "                      \n",
     "                      \"0204295505\":{\"lat\":{\"deg\":36.0,\"min\":51.0, \"sec\":33.4},\n",
-    "                                    \"lon\":{\"deg\":-75.0,\"min\":59, \"sec\":4.1}},\n",
+    "                                    \"lon\":{\"deg\":75.0,\"min\":59, \"sec\":4.1}},\n",
     "                      \n",
     "                      \"02042928\":{\"lat\":{\"deg\":36.0,\"min\":48.0, \"sec\":56.8},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":3.0, \"sec\":39.3}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":3.0, \"sec\":39.3}},\n",
     "                      \n",
     "                      \"0204297575\":{\"lat\":{\"deg\":36.0,\"min\":49.0, \"sec\":29.2},\n",
-    "                                    \"lon\":{\"deg\":-75.0,\"min\":59.0, \"sec\":6.9}},\n",
+    "                                    \"lon\":{\"deg\":75.0,\"min\":59.0, \"sec\":6.9}},\n",
     "                      \n",
     "                      \"02043155\":{\"lat\":{\"deg\":36.0,\"min\":47.0, \"sec\":18.1},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":4.0, \"sec\":14.8}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":4.0, \"sec\":14.8}},\n",
     "                      \n",
     "                      \"0204288539\":{\"lat\":{\"deg\":36.0,\"min\":42.0, \"sec\":42.1},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":16.0, \"sec\":5.6}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":16.0, \"sec\":5.6}},\n",
     "                      \n",
     "                      \"0204309906\":{\"lat\":{\"deg\":36.0,\"min\":41.0, \"sec\":26.32},\n",
-    "                                    \"lon\":{\"deg\":-76.0,\"min\":12.0, \"sec\":44.34}},\n",
+    "                                    \"lon\":{\"deg\":76.0,\"min\":12.0, \"sec\":44.34}},\n",
     "                      \n",
     "                      \"0204300267\":{\"lat\":{\"deg\":36.0,\"min\":40.0, \"sec\":47.3},\n",
-    "                                    \"lon\":{\"deg\":-75.0,\"min\":59, \"sec\":2.4}},\n",
+    "                                    \"lon\":{\"deg\":75.0,\"min\":59, \"sec\":2.4}},\n",
     "                     }"
    ]
   },
@@ -296,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +318,7 @@
        "{'deg': 36.0, 'min': 49.0, 'sec': 38.0}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +329,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'deg': 76.0, 'min': 9.0, 'sec': 56.0}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc_degminsec_dict[\"0204288721\"]['lon']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +358,7 @@
        "36.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,13 +384,16 @@
     "    minutes = loc_degminsec_dict[station]['lon']['min']\n",
     "    seconds = loc_degminsec_dict[station]['lon']['sec']    \n",
     "    pointY = degrees + minutes/60.0 + seconds/3600.0 \n",
+    "    \n",
+    "    # convert pointY to negative at end.\n",
+    "    pointY = -pointY\n",
     "\n",
     "    return pointX, pointY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(36.827222222222225, -75.83444444444444)"
+       "(36.827222222222225, -76.16555555555556)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,23 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "station id: 0204288721 lat: 36.827222222222225 lon: -75.83444444444444\n",
-      "station id: 0204291317 lat: 36.84330555555556 lon: -75.87552777777779\n",
-      "station id: 0204293125 lat: 36.84113888888889 lon: -75.94286111111111\n",
-      "station id: 0204295505 lat: 36.85927777777778 lon: -74.01552777777778\n",
-      "station id: 02042928 lat: 36.815777777777775 lon: -75.93908333333334\n",
-      "station id: 0204297575 lat: 36.82477777777778 lon: -74.01474999999999\n",
-      "station id: 02043155 lat: 36.78836111111111 lon: -75.92922222222222\n",
-      "station id: 0204288539 lat: 36.71169444444445 lon: -75.73177777777778\n",
-      "station id: 0204309906 lat: 36.690644444444445 lon: -75.78768333333333\n",
-      "station id: 0204300267 lat: 36.679805555555554 lon: -74.016\n"
+      "station id: 0204288721 lat: 36.827222222222225 lon: -76.16555555555556\n",
+      "station id: 0204291317 lat: 36.84330555555556 lon: -76.12447222222221\n",
+      "station id: 0204293125 lat: 36.84113888888889 lon: -76.05713888888889\n",
+      "station id: 0204295505 lat: 36.85927777777778 lon: -75.98447222222222\n",
+      "station id: 02042928 lat: 36.815777777777775 lon: -76.06091666666666\n",
+      "station id: 0204297575 lat: 36.82477777777778 lon: -75.98525000000001\n",
+      "station id: 02043155 lat: 36.78836111111111 lon: -76.07077777777778\n",
+      "station id: 0204288539 lat: 36.71169444444445 lon: -76.26822222222222\n",
+      "station id: 0204309906 lat: 36.690644444444445 lon: -76.21231666666667\n",
+      "station id: 0204300267 lat: 36.679805555555554 lon: -75.984\n"
      ]
     }
    ],
@@ -436,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
